--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "node": "^15.0.1",
     "pg": "^8.4.1",
     "sequelize": "^6.3.5",
